# open_spiel

open_spiel/: CMakeLists.txt
open_spiel/algorithms/: CMakeLists.txt
open_spiel/algorithms/alpha_zero/: CMakeLists.txt  vpnet.h
open_spiel/contrib/: CMakeLists.txt  tf_trajectories.cc
open_spiel/examples/: CMakeLists.txt
open_spiel/scripts/: build_and_run_tests.sh  install.sh
